adding descriptions, need S.N.A.P. summary next

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       <img id="logo" src="./img/logo.png"></img>
       <h2 class="brand_name">snap.<span id="col_red">red</span></h2>
       <div>
-        <a rel="noopener" class="hover_underline_anim" href="./index.html">Home</a>
+        <a rel="noopener" class="hover_underline_anim" href="#home">Home</a>
         <a rel="noopener" class="hover_underline_anim" href="#services">Service</a>
-        <a rel="noopener" class="hover_underline_anim" href="#about_us">About Us</a>
+        <a rel="noopener" class="hover_underline_anim" href="#about_us">About</a>
       </div>
     </div>
     
