--- a/s/automation.html
+++ b/s/automation.html
@@ -13,15 +13,15 @@
       <img id="logo" src="../img/logo.png"></img>
       <h2 class="brand_name">snap.<span id="col_red">red</span></h2>
       <div>
-        <a rel="noopener" class="hover_underline_anim" href="../index.html">Home</a>
+        <a rel="noopener" class="hover_underline_anim" href="../index.html#home">Home</a>
         <a rel="noopener" class="hover_underline_anim" href="../index.html#services">Service</a>
-        <a rel="noopener" class="hover_underline_anim" href="../index.html#about_us">About Us</a>
+        <a rel="noopener" class="hover_underline_anim" href="../index.html#about_us">About</a>
       </div>
     </div>
 
     <div class="description_container">
       <h2>Automation S.N.A.P.</h2>
-      <p>Automation description</p>
+      <p>Our AI automation consulting offers a customized experience, harnessing tailored solutions to seamlessly integrate AI technology into your organization. Bid farewell to manual tasks and data entry, and welcome a plethora of AI solutions, meticulously curated by our experts to streamline your operations.</p>
     </div>
 
     <script src="../js/short.js"></script>
