--- a/s/cyber.html
+++ b/s/cyber.html
@@ -13,15 +13,15 @@
       <img id="logo" src="../img/logo.png"></img>
       <h2 class="brand_name">snap.<span id="col_red">red</span></h2>
       <div>
-        <a rel="noopener" class="hover_underline_anim" href="../index.html">Home</a>
+        <a rel="noopener" class="hover_underline_anim" href="../index.html#home">Home</a>
         <a rel="noopener" class="hover_underline_anim" href="../index.html#services">Service</a>
-        <a rel="noopener" class="hover_underline_anim" href="../index.html#about_us">About Us</a>
+        <a rel="noopener" class="hover_underline_anim" href="../index.html#about_us">About</a>
       </div>
     </div>
 
     <div class="description_container">
       <h2>Cyber Security S.N.A.P.</h2>
-      <p>Cyber security description</p>
+      <p>Our cybersecurity consulting aims to heighten your business's awareness of potential attack vectors and offer actionable guidance. Focused on website infrastructure and API security, our team assesses your company's assets, delivering a comprehensive report with severity and impact ratings, along with remediation steps.</p>
     </div>
 
     <script src="../js/short.js"></script>
