--- a/s/marketing.html
+++ b/s/marketing.html
@@ -13,15 +13,15 @@
       <img id="logo" src="../img/logo.png"></img>
       <h2 class="brand_name">snap.<span id="col_red">red</span></h2>
       <div>
-        <a rel="noopener" class="hover_underline_anim" href="../index.html">Home</a>
+        <a rel="noopener" class="hover_underline_anim" href="../index.html#home">Home</a>
         <a rel="noopener" class="hover_underline_anim" href="../index.html#services">Service</a>
-        <a rel="noopener" class="hover_underline_anim" href="../index.html#about_us">About Us</a>
+        <a rel="noopener" class="hover_underline_anim" href="../index.html#about_us">About</a>
       </div>
     </div>
 
     <div class="description_container">
       <h2>Marketing S.N.A.P.</h2>
-      <p>Marketing description</p>
+      <p>In today's social media-driven world, a robust online presence is vital for businesses. We specialize in crafting that presence for you. Whether it's establishing your online storefront, refining SEO, or creating engaging content like TikToks, our extensive industry experience can elevate your internet presence. Our solutions are results-driven, making us the ideal choice to enhance your brand.</p>
     </div>
 
     <script src="../js/short.js"></script>
