--- a/s/software.html
+++ b/s/software.html
@@ -13,15 +13,15 @@
       <img id="logo" src="../img/logo.png"></img>
       <h2 class="brand_name">snap.<span id="col_red">red</span></h2>
       <div>
-        <a rel="noopener" class="hover_underline_anim" href="../index.html">Home</a>
+        <a rel="noopener" class="hover_underline_anim" href="../index.html#home">Home</a>
         <a rel="noopener" class="hover_underline_anim" href="../index.html#services">Service</a>
-        <a rel="noopener" class="hover_underline_anim" href="../index.html#about_us">About Us</a>
+        <a rel="noopener" class="hover_underline_anim" href="../index.html#about_us">About</a>
       </div>
     </div>
 
     <div class="description_container">
       <h2>Software S.N.A.P.</h2>
-      <p>Software description</p>
+      <p>For our software SNAP-methodology, the name of the game is performance across any platform, ensuring blazing-fast load times that boost your website’s SEO and create a more immersive user experience. This not only keeps your users engaged but also provides a streamlined testing environment for your development team. In addition to performance optimization, we prioritize code readability and cleanliness. We understand that clean code is the foundation for any successful software project. It not only makes life easier for developers, both new and experienced, but it also fosters a positive and productive work environment. Furthermore, we offer front-end services to enhance the customer-facing side of your software. This will not only modernize your interface, but also contributes to your overall customer satisfaction.</p>
     </div>
 
     <script src="../js/short.js"></script>
