--- a/s/automation.html
+++ b/s/automation.html
@@ -22,6 +22,12 @@
     <div class="description_container">
       <h2>Automation S.N.A.P.</h2>
       <p>Our AI automation consulting offers a customized experience, harnessing tailored solutions to seamlessly integrate AI technology into your organization. Bid farewell to manual tasks and data entry, and welcome a plethora of AI solutions, meticulously curated by our experts to streamline your operations.</p>
+      <p>
+S : Survey Workflow<br>
+N : Niche Identification<br>
+A : Automation Implementation<br>
+P : Performance Optimization
+      </p>
     </div>
 
     <script src="../js/short.js"></script>
