--- a/s/cyber.html
+++ b/s/cyber.html
@@ -22,6 +22,12 @@
     <div class="description_container">
       <h2>Cyber Security S.N.A.P.</h2>
       <p>Our cybersecurity consulting aims to heighten your business's awareness of potential attack vectors and offer actionable guidance. Focused on website infrastructure and API security, our team assesses your company's assets, delivering a comprehensive report with severity and impact ratings, along with remediation steps.</p>
+      <p>
+S : Security Analysis<br>
+N : Network Protection<br>
+A : Awareness Training<br>
+P : Proactive Monitoring
+      </p>
     </div>
 
     <script src="../js/short.js"></script>
