--- a/s/marketing.html
+++ b/s/marketing.html
@@ -22,6 +22,12 @@
     <div class="description_container">
       <h2>Marketing S.N.A.P.</h2>
       <p>In today's social media-driven world, a robust online presence is vital for businesses. We specialize in crafting that presence for you. Whether it's establishing your online storefront, refining SEO, or creating engaging content like TikToks, our extensive industry experience can elevate your internet presence. Our solutions are results-driven, making us the ideal choice to enhance your brand.</p>
+      <p>
+S : Social Media Optimization<br>
+N : Narrative Generation<br>
+A : A/B testing<br>
+P : Pursue Leads
+      </p>
     </div>
 
     <script src="../js/short.js"></script>
