more quick fixes test across browsers to verify work

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="background_container"><div id="background"></div></div>
     
     <div class="options">
-      <img id="logo" src="./img/logo.png"></img>
+      <img id="logo" src="./img/logo.webp"></img>
       <h2 class="brand_name">snap.<span id="col_red">red</span></h2>
       <div>
         <a rel="noopener" class="hover_underline_anim" href="#home">Home</a>
@@ -107,7 +107,7 @@ Snap.<span id="col_red">Red</span> is a cutting-edge AI consulting firm that pio
   
         <img class="about_img" src="./img/placeholder.webp"><p>Aiden H.</p>
         
-        <img class="about_img" src="./img/rhesa.jpg"><p>Rhesa T.</p>
+        <img class="about_img" src="./img/placeholder.webp"><p>Rhesa T.</p>
       </div>
       <div id="about_bottom">
         <img class="about_img" src="./img/placeholder.webp"><p>Isaiah W.</p>
