--- a/s/cyber.html
+++ b/s/cyber.html
@@ -10,7 +10,7 @@
     <div id="background_container"><div id="background"></div></div>
     
     <div class="options">
-      <img id="logo" src="../img/logo.png"></img>
+      <img id="logo" src="../img/logo.webp"></img>
       <h2 class="brand_name">snap.<span id="col_red">red</span></h2>
       <div>
         <a rel="noopener" class="hover_underline_anim" href="../index.html#home">Home</a>
