--- a/s/software.html
+++ b/s/software.html
@@ -10,7 +10,7 @@
     <div id="background_container"><div id="background"></div></div>
     
     <div class="options">
-      <img id="logo" src="../img/logo.png"></img>
+      <img id="logo" src="../img/logo.webp"></img>
       <h2 class="brand_name">snap.<span id="col_red">red</span></h2>
       <div>
         <a rel="noopener" class="hover_underline_anim" href="../index.html#home">Home</a>
@@ -23,10 +23,10 @@
       <h2>Software S.N.A.P.</h2>
       <p>The name of the game is performance across any platform, ensuring blazing-fast load to create a more immersive user experience. This not only keeps your users engaged, but also provides a streamlined testing environment for your development team. In addition to optimization, we prioritize code readability and cleanliness. We understand that clean code is the foundation for any successful project. It not only makes life easier for developers, but it also fosters a positive and productive work environment. Furthermore, we offer front-end services to enhance the customer-facing side of your software to not only modernize your interface, but also improve overall customer satisfaction.</p>
       <p>
-S.tudy Infrastructure<br>&nbsp;&nbsp;- Verify tech stack, technologies used, and overall hierarchical structure.<br><br>
-N.eeds Analysis<br>&nbsp;&nbsp;- Confirm your personal needs, as well noting possible improvements in any and all sectors.<br><br>
-A.ction Plan<br>&nbsp;&nbsp;- Discuss detailed plan we intend to carry out, confirming and denying any individual service, including anything that comes up on the path to a better business. Communication is #1, and control is yours.<br><br>
-P.roduction Review<br>&nbsp;&nbsp;- Post-implementation analysis and tweaks for further optimization. It is our need to verify our work to better support you, the customer.
+<b><u>S</u></b>.tudy Infrastructure<br>&nbsp;&nbsp;- Verify tech stack, technologies used, and overall hierarchical structure.<br><br>
+<b><u>N</u></b>.eeds Analysis<br>&nbsp;&nbsp;- Confirm your personal needs, as well noting possible improvements in any and all sectors.<br><br>
+<b><u>A</u></b>.ction Plan<br>&nbsp;&nbsp;- Discuss detailed plan we intend to carry out, confirming and denying any individual service, including anything that comes up on the path to a better business. Communication is #1, and control is yours.<br><br>
+<b><u>P</u></b>.roduction Review<br>&nbsp;&nbsp;- Post-implementation analysis and tweaks for further optimization. It is our need to verify our work to better support you, the customer.
       </p>
     </div>
 
