--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
     <div id="background_container"><div id="background"></div></div>
     
     <div class="options">
-      <img id="logo" src="./img/logo.webp"></img>
-      <h2 class="brand_name">snap.<span id="col_red">red</span></h2>
+      <a rel="noopener" href="#home">
+        <div id="logo_container">
+          <img id="logo" src="./img/logo.webp"></img>
+          <h2 class="brand_name">snap.<span id="col_red">red</span></h2>
+        </div>
+      </a>
       <div>
         <a rel="noopener" class="hover_underline_anim" href="#home">Home</a>
         <a rel="noopener" class="hover_underline_anim" href="#services">Service</a>
@@ -106,7 +110,7 @@ Snap.<span id="col_red">Red</span> is a cutting-edge AI consulting firm that pio
         </div>
 
         <div class="about_container">
-          <img class="about_img" src="./img/placeholder.webp"><p>Vanness G.</p>
+          <img class="about_img" src="./img/placeholder.webp"><p>Vaness G.</p>
         </div>
   
         <div class="about_container">
