--- a/s/cyber.html
+++ b/s/cyber.html
@@ -10,8 +10,12 @@
     <div id="background_container"><div id="background"></div></div>
     
     <div class="options">
-      <img id="logo" src="../img/logo.webp"></img>
-      <h2 class="brand_name">snap.<span id="col_red">red</span></h2>
+      <a rel="noopener" href="../index.html#home">
+        <div id="logo_container">
+          <img id="logo" src="./img/logo.webp"></img>
+          <h2 class="brand_name">snap.<span id="col_red">red</span></h2>
+        </div>
+      </a>
       <div>
         <a rel="noopener" class="hover_underline_anim" href="../index.html#home">Home</a>
         <a rel="noopener" class="hover_underline_anim" href="../index.html#services">Service</a>
@@ -23,10 +27,10 @@
       <h2>Cyber Security S.N.A.P.</h2>
       <p>Our cybersecurity consulting aims to heighten your business's awareness of potential attack vectors and offer actionable guidance. Focused on website infrastructure and API security, our team assesses your company's assets, delivering a comprehensive report with severity and impact ratings, along with remediation steps.</p>
       <p>
-S : Security Analysis<br>
-N : Network Protection<br>
-A : Awareness Training<br>
-P : Proactive Monitoring
+<b><u>S</u>ecurity Analysis</b><br>&nbsp;&nbsp;- Brief overview of the technologies used by your business to identify the biggest threats to your security.<br><br>
+<b><u>N</u>etwork Protection</b><br>&nbsp;&nbsp;- Assessment of the technologies used to protect your network. We will provide a report on the effectiveness of the systems in place and reasonable alternatives if recommended.<br><br>
+<b><u>A</u>Awareness Training</b><br>&nbsp;&nbsp;- 90 minute awareness training for employees. The training will cover common threats and how employees can assist with hardened security measures.<br><br>
+<b><u>P</u>roactive Monitoring</b><br>&nbsp;&nbsp;- Full assessment of your company's systems and in depth reports of vulnerabilities. A team member will review the report in a final meeting and discuss solutions for crucial weaknesses.
       </p>
     </div>
 
