--- a/s/marketing.html
+++ b/s/marketing.html
@@ -10,8 +10,12 @@
     <div id="background_container"><div id="background"></div></div>
     
     <div class="options">
-      <img id="logo" src="../img/logo.webp"></img>
-      <h2 class="brand_name">snap.<span id="col_red">red</span></h2>
+      <a rel="noopener" href="../index.html#home">
+        <div id="logo_container">
+          <img id="logo" src="./img/logo.webp"></img>
+          <h2 class="brand_name">snap.<span id="col_red">red</span></h2>
+        </div>
+      </a>
       <div>
         <a rel="noopener" class="hover_underline_anim" href="../index.html#home">Home</a>
         <a rel="noopener" class="hover_underline_anim" href="../index.html#services">Service</a>
@@ -23,10 +27,10 @@
       <h2>Marketing S.N.A.P.</h2>
       <p>In today's social media-driven world, a robust online presence is vital for businesses. We specialize in crafting that presence for you. Whether it's establishing your online storefront, refining SEO, or creating engaging content like TikToks, our extensive industry experience can elevate your internet presence. Our solutions are results-driven, making us the ideal choice to enhance your brand.</p>
       <p>
-S : Social Media Optimization<br>
-N : Narrative Generation<br>
-A : A/B testing<br>
-P : Pursue Leads
+<b><u>S</u>ocial Media Assessment</b><br>&nbsp;&nbsp;- Analyze social media accounts to create KPIs (key performance indicators) based on social media engagement. Using this data, we can effectively create new KPI goals based on current data using our solutions in AI marketing, social media optimization, and content creation.<br><br>
+<b><u>N</u>ice Identification</b><br>&nbsp;&nbsp;- Identifying your niche will help you reach maximum engagement through social media. Boost your engagement with the help of snap.<span id="col_red">red</span> experts, who can create STP analysis to position your business to effectively market your target audience in a dynamic consumer market for content and advertising.<br><br>
+<b><u>A</u>/B Testing</b><br>&nbsp;&nbsp;- By rigorously testing different variables, we aim to improve key performance indicators (KPIs) through identification and implementation of various opportunities within our existing marketing efforts such as conversion rates, click-through rates, and customer engagement. This, in turn, will lead to increased brand awareness, customer loyalty, and revenue.<br><br>
+<b><u>P</u>ursue Leads</b><br>&nbsp;&nbsp;- 
       </p>
     </div>
 
