--- a/s/software.html
+++ b/s/software.html
@@ -10,8 +10,12 @@
     <div id="background_container"><div id="background"></div></div>
     
     <div class="options">
-      <img id="logo" src="../img/logo.webp"></img>
-      <h2 class="brand_name">snap.<span id="col_red">red</span></h2>
+      <a rel="noopener" href="../index.html#home">
+        <div id="logo_container">
+          <img id="logo" src="./img/logo.webp"></img>
+          <h2 class="brand_name">snap.<span id="col_red">red</span></h2>
+        </div>
+      </a>
       <div>
         <a rel="noopener" class="hover_underline_anim" href="../index.html#home">Home</a>
         <a rel="noopener" class="hover_underline_anim" href="../index.html#services">Service</a>
