--- a/s/automation.html
+++ b/s/automation.html
@@ -10,8 +10,12 @@
     <div id="background_container"><div id="background"></div></div>
     
     <div class="options">
-      <img id="logo" src="../img/logo.webp"></img>
-      <h2 class="brand_name">snap.<span id="col_red">red</span></h2>
+      <a rel="noopener" href="../index.html#home">
+        <div id="logo_container">
+          <img id="logo" src="./img/logo.webp"></img>
+          <h2 class="brand_name">snap.<span id="col_red">red</span></h2>
+        </div>
+      </a>
       <div>
         <a rel="noopener" class="hover_underline_anim" href="../index.html#home">Home</a>
         <a rel="noopener" class="hover_underline_anim" href="../index.html#services">Service</a>
@@ -23,10 +27,10 @@
       <h2>Automation S.N.A.P.</h2>
       <p>Our AI automation consulting offers a customized experience, harnessing tailored solutions to seamlessly integrate AI technology into your organization. Bid farewell to manual tasks and data entry, and welcome a plethora of AI solutions, meticulously curated by our experts to streamline your operations.</p>
       <p>
-S : Survey Workflow<br>
-N : Niche Identification<br>
-A : Automation Implementation<br>
-P : Performance Optimization
+<b><u>S</u>ystem Analysis</b><br>&nbsp;&nbsp;- Comprehensive analysis of your existing systems and processes, examining their intricacies to ascertain areas that can benefit from automation.<br><br>
+<b><u>N</u>eeds Assessment</b><br>&nbsp;&nbsp;- Pinpoint unique challenges and distinct automation opportunities inherent to your organization.<br><br>
+<b><u>A</u>.I. Integration</b><br>&nbsp;&nbsp;- Deploy bespoke artificial intelligence solutions, ensuring they are harmoniously synchronized with your organization's explicit demands, thereby facilitating a smooth and efficient integration.<br><br>
+<b><u>P</u>roductivity Optimization</b><br>&nbsp;&nbsp;- Sixty-day check-in to perform final analysis and compile closing report of our implemented automation methods.
       </p>
     </div>
 
