--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ Snap.<span id="col_red">Red</span> is a cutting-edge AI consulting firm that pio
       </div>
     </div>
 
-    <a href="javascript:void(0)">
+    <a href="https://calendly.com/mon3yt3am/free-consultation">
       <button class="contact_us">Contact Us</button>
     </a>
     <script src="js/main.js"></script>
