--- a/s/automation.html
+++ b/s/automation.html
@@ -12,7 +12,7 @@
     <div class="options">
       <a rel="noopener" href="../index.html#home">
         <div id="logo_container">
-          <img id="logo" src="./img/logo.webp"></img>
+          <img id="logo" src="../img/logo.webp"></img>
           <h2 class="brand_name">snap.<span id="col_red">red</span></h2>
         </div>
       </a>
