--- a/s/cyber.html
+++ b/s/cyber.html
@@ -12,7 +12,7 @@
     <div class="options">
       <a rel="noopener" href="../index.html#home">
         <div id="logo_container">
-          <img id="logo" src="./img/logo.webp"></img>
+          <img id="logo" src="../img/logo.webp"></img>
           <h2 class="brand_name">snap.<span id="col_red">red</span></h2>
         </div>
       </a>
@@ -29,7 +29,7 @@
       <p>
 <b><u>S</u>ecurity Analysis</b><br>&nbsp;&nbsp;- Brief overview of the technologies used by your business to identify the biggest threats to your security.<br><br>
 <b><u>N</u>etwork Protection</b><br>&nbsp;&nbsp;- Assessment of the technologies used to protect your network. We will provide a report on the effectiveness of the systems in place and reasonable alternatives if recommended.<br><br>
-<b><u>A</u>Awareness Training</b><br>&nbsp;&nbsp;- 90 minute awareness training for employees. The training will cover common threats and how employees can assist with hardened security measures.<br><br>
+<b><u>A</u>wareness Training</b><br>&nbsp;&nbsp;- 90 minute awareness training for employees. The training will cover common threats and how employees can assist with hardened security measures.<br><br>
 <b><u>P</u>roactive Monitoring</b><br>&nbsp;&nbsp;- Full assessment of your company's systems and in depth reports of vulnerabilities. A team member will review the report in a final meeting and discuss solutions for crucial weaknesses.
       </p>
     </div>
