text relocation and scrollfix

--- a/index.html
+++ b/index.html
@@ -57,47 +57,47 @@ Snap.<span id="col_red">Red</span> is a cutting-edge AI consulting firm that pio
     </table>
     <div id="hidden_paragraph">
       <h2 class="hidden_txt">Software Consulting</h2>
-        <p class="hidden_txt">
+        <p class="hidden_txt hidden_p">
           S : Study Infrastructure<br>
           N : Needs Analysis<br>
           A : Action Plan<br>
           P : Production Review
         </p>
         <a href="./s/software.html" class="hidden_link_txt">
-          <button class="hidden_link_btn">See details</button>
+          <button class="hidden_link_btn">Learn more</button>
         </a>
 
       <h2 class="hidden_txt">Automation Consulting</h2>
-        <p class="hidden_txt">
+        <p class="hidden_txt hidden_p">
           S : Survey Workflow<br>
           N : Niche Identification<br>
           A : Automation Implementation<br>
           P : Performance Optimization
         </p>
         <a href="./s/automation.html" class="hidden_link_txt">
-          <button class="hidden_link_btn">See details</button>
+          <button class="hidden_link_btn">Learn more</button>
         </a>
 
       <h2 class="hidden_txt">Marketing Consulting</h2>
-        <p class="hidden_txt">
+        <p class="hidden_txt hidden_p">
           S : Social Media Assessment<br>
           N : Narrative Generation<br>
           A : Action Plan<br>
           P : Presentation Analysis
         </p>
         <a href="./s/marketing.html" class="hidden_link_txt">
-          <button class="hidden_link_btn">See details</button>
+          <button class="hidden_link_btn">Learn more</button>
         </a>
 
       <h2 class="hidden_txt">Cyber Security Consulting</h2>
-        <p class="hidden_txt">
+        <p class="hidden_txt hidden_p">
           S : Security Analysis<br>
           N : Network Protection<br>
           A : Awareness Training<br>
           P : Proactive Monitoring
         </p>
         <a href="./s/cyber.html" class="hidden_link_txt">
-          <button class="hidden_link_btn">See details</button>
+          <button class="hidden_link_btn">Learn more</button>
         </a>
     </div>
 
