small pre-meeting changes

--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@ Snap.<span id="col_red">Red</span> is a cutting-edge AI consulting firm that pio
 
       <h2 class="hidden_txt">Automation Consulting</h2>
         <p class="hidden_txt hidden_p">
-          S : Survey Workflow<br>
-          N : Niche Identification<br>
-          A : Automation Implementation<br>
-          P : Performance Optimization
+          S : System Analysis<br>
+          N : Needs Assessment<br>
+          A : A.I. Integration<br>
+          P : Productivity Automation
         </p>
         <a href="./s/automation.html" class="hidden_link_txt">
           <button class="hidden_link_btn">Learn more</button>
@@ -81,9 +81,9 @@ Snap.<span id="col_red">Red</span> is a cutting-edge AI consulting firm that pio
       <h2 class="hidden_txt">Marketing Consulting</h2>
         <p class="hidden_txt hidden_p">
           S : Social Media Assessment<br>
-          N : Narrative Generation<br>
-          A : Action Plan<br>
-          P : Presentation Analysis
+          N : Niche Identification<br>
+          A : A/B Testing<br>
+          P : Pursue Leads
         </p>
         <a href="./s/marketing.html" class="hidden_link_txt">
           <button class="hidden_link_btn">Learn more</button>
