--- a/index.html
+++ b/index.html
@@ -106,32 +106,32 @@ Snap.<span id="col_red">Red</span> is a cutting-edge AI consulting firm that pio
     <div id="about">
       <div id="about_top">
         <div class="about_container">
-          <img class="about_img" src="./img/placeholder.webp"><p>Demarre J.</p>
+          <img class="about_img" src="./img/marre_dark.png"><p>Demarre J.</p>
         </div>
 
         <div class="about_container">
-          <img class="about_img" src="./img/placeholder.webp"><p>Vaness G.</p>
+          <img class="about_img" src="./img/reece_dark.png"><p>Vaness G.</p>
         </div>
   
         <div class="about_container">
-          <img class="about_img" src="./img/placeholder.webp"><p>Aiden H.</p>
+          <img class="about_img" src="./img/aiden_dark.png"><p>Aiden H.</p>
         </div>
 
         <div class="about_container">
-          <img class="about_img" src="./img/placeholder.webp"><p>Rhesa T.</p>
+          <img class="about_img" src="./img/rhesa_dark.png"><p>Rhesa T.</p>
         </div>
       </div>
       <div id="about_bottom">
         <div class="about_container">
-          <img class="about_img" src="./img/placeholder.webp"><p>Isaiah W.</p>
+          <img class="about_img" src="./img/zay_dark.png"><p>Isaiah W.</p>
         </div>
 
         <div class="about_container">
-          <img class="about_img" src="./img/placeholder.webp"><p>Spencer K.</p>
+          <img class="about_img" src="./img/spencer_dark.png"><p>Spencer K.</p>
         </div>
 
         <div class="about_container">
-          <img class="about_img" src="./img/placeholder.webp"><p>Jack F.</p>
+          <img class="about_img" src="./img/jack_dark.png"><p>Jack F.</p>
         </div>
       </div>
     </div>
