i deserve sloppy 4 how annoying this was... just saying..... bugfixes next update

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     
     <div class="mission_container">
       <p class="mission_statement">
-Snap.<span id="col_red">Red</span> is a cutting-edge AI consulting firm that pioneers innovative solutions in software, AI automation, marketing, and cyber security. We are dedicated to revolutionizing businesses' approach to AI enabling them to unlock the full potential of these emerging technologies.
+snap.<span id="col_red">red</span> is a cutting-edge AI consulting firm that pioneers innovative solutions in software, AI automation, marketing, and cyber security. We are dedicated to revolutionizing businesses' approach to AI enabling them to unlock the full potential of these emerging technologies.
       </p>
     </div>
 
@@ -112,13 +112,13 @@ Snap.<span id="col_red">Red</span> is a cutting-edge AI consulting firm that pio
         <div class="about_container">
           <img class="about_img" src="./img/reece_dark.webp"><p>Vaness G.</p>
         </div>
+
+        <div class="about_container">
+          <img class="about_img" src="./img/jack_dark.webp"><p>Jack F.</p>
+        </div>
   
         <div class="about_container">
           <img class="about_img" src="./img/aiden_dark.webp"><p>Aiden H.</p>
-        </div>
-
-        <div class="about_container">
-          <img class="about_img" src="./img/rhesa_dark.webp"><p>Rhesa T.</p>
         </div>
       </div>
       <div id="about_bottom">
@@ -131,7 +131,7 @@ Snap.<span id="col_red">Red</span> is a cutting-edge AI consulting firm that pio
         </div>
 
         <div class="about_container">
-          <img class="about_img" src="./img/jack_dark.webp"><p>Jack F.</p>
+          <img class="about_img" src="./img/rhesa_dark.webp"><p>Rhesa T.</p>
         </div>
       </div>
     </div>
@@ -139,6 +139,7 @@ Snap.<span id="col_red">Red</span> is a cutting-edge AI consulting firm that pio
     <a href="https://calendly.com/mon3yt3am/free-consultation">
       <button class="contact_us">Contact Us</button>
     </a>
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
