changes & faq base, need to fix

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
       </a>
       <div>
         <a rel="noopener" class="hover_underline_anim" href="#home">Home</a>
-        <a rel="noopener" class="hover_underline_anim" href="#services">Service</a>
+        <a rel="noopener" class="hover_underline_anim" href="#services">Services</a>
         <a rel="noopener" class="hover_underline_anim" href="#about_us">About</a>
+        <a class="hover_underline_anim" href="./faq.html">FAQ</a>
       </div>
     </div>
     
@@ -136,7 +137,7 @@ snap.<span id="col_red">red</span> is a cutting-edge AI consulting firm that pio
       </div>
     </div>
 
-    <a href="https://calendly.com/mon3yt3am/free-consultation">
+    <a href="https://calendly.com/mon3yt3am/free-consultation" target="_blank">
       <button class="contact_us">Contact Us</button>
     </a>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
