--- a/s/marketing.html
+++ b/s/marketing.html
@@ -18,8 +18,9 @@
       </a>
       <div>
         <a rel="noopener" class="hover_underline_anim" href="../index.html#home">Home</a>
-        <a rel="noopener" class="hover_underline_anim" href="../index.html#services">Service</a>
+        <a rel="noopener" class="hover_underline_anim" href="../index.html#services">Services</a>
         <a rel="noopener" class="hover_underline_anim" href="../index.html#about_us">About</a>
+        <a class="hover_underline_anim" href="../faq.html">FAQ</a>
       </div>
     </div>
 
@@ -34,6 +35,7 @@
       </p>
     </div>
 
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script src="../js/short.js"></script>
   </body>
 </html>
