--- a/faq.html
+++ b/faq.html
@@ -28,7 +28,8 @@
     <div id="faq">
       <div class="qna">
         <div class="question-container">
-          Is AI implementation cost-effective for small businesses? <div class="icon-container"><i class="fas fa-chevron-right"></i></div>
+          <div class="question">Is AI implementation cost-effective for small businesses?</div>
+          <div class="icon-container"><i class="fas fa-chevron-right"></i></div>
         </div>
         <div class="answer">
           <p>According to a recent survey by McKinsey, AI can improve business efficiency by up to 40% and reduce operational costs by up to 30%. In a world where inflation is raising the costs of production, productivity is needed to recover the losses of COVID-19.</p>
